name: control-monad-failure
version: 0.1
Cabal-Version:  >= 1.2.3
build-type: Simple
license: PublicDomain
author: Pepe Iborra, Michael Snoyman, Nicolas Pouillard
maintainer: pepeiborra@gmail.com
homepage: http://github.com/pepeiborra/control-monad-failure
description: A class for monads which can fail with an error.
synopsis: A class for monads which can fail with an error.
category: Control, Monads
stability: experimental

Library
  buildable: True
  build-depends: base >= 4 && < 5, pretty, template-haskell, transformers

  extensions:  MultiParamTypeClasses, FlexibleInstances
  exposed-modules:
     Control.Monad.Failure
